css-fixes, validation, events hovers

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -23,3 +23,13 @@ body {
   --bg-300: #ebebeb;
   --bg-400: #cccccc;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
